@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Flexc++ V 2.03.00</title>
+<title>Flexc++ V 2.03.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr>
-<h1>Flexc++ V 2.03.00</h1>
+<h1>Flexc++ V 2.03.01</h1>
 <h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
 
 <h2>Center for Information Technology, University of Groningen</h2><h2>2008-2015</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.01">2.03.01</a>
+Sep 28, 2015;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.03.00">2.03.00</a>
 Aug 28, 2015;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.02.00">2.02.00</a>
@@ -42,9 +44,7 @@ instead);
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.01.00">2.01.00</a>
 Mar 16, 2014;
         <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/2.00.00">2.00.00</a>
-Feb 9, 2014;
-        <li> <a href="https://github.com/fbb-git/flexcpp/releases/tag/1.07.00">1.07.00</a>
-Aug 11, 2013.
+Feb 9, 2014.
         </ul>
     
 <p>
