@@ -36,6 +36,9 @@ lurl(https://github.com/fbb-git/_project_/releases) or direct from its
 release page):
 
         itemization(
+        it() url(2.03.01)
+                (https://github.com/fbb-git/_project_/releases/tag/2.03.01)
+Sep 28, 2015;
         it() url(2.03.00)
                 (https://github.com/fbb-git/_project_/releases/tag/2.03.00)
 Aug 28, 2015;
@@ -49,10 +52,7 @@ instead);
 Mar 16, 2014;
         it() url(2.00.00)
                 (https://github.com/fbb-git/_project_/releases/tag/2.00.00)
-Feb 9, 2014;
-        it() url(1.07.00)
-                (https://github.com/fbb-git/_project_/releases/tag/1.07.00)
-Aug 11, 2013.
+Feb 9, 2014.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
