@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>flexc++</h1>
-<h2>flexc++.2.03.00.tar.gz</h2>
+<h2>flexc++.2.03.01.tar.gz</h2>
 <h2>2008-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>flexc++(1)</h1>
-<h2>flexc++.2.03.00.tar.gz flexc++ scanner generator</h2>
+<h2>flexc++.2.03.01.tar.gz flexc++ scanner generator</h2>
 <h2>2008-2015</h2>
 
 
@@ -93,11 +93,11 @@ relates manual pages to their specific contents:
 This man-page offers the following sections:
 <p>
 <ul>
-    <li> <strong>1. QUICK START</strong>: a quick start overview about how to use <strong>flexc++</strong>.
+    <li> <strong>1. QUICK START</strong>: a quick start overview about how to use <strong>flexc++</strong>;
     <li> <strong>2. QUICK START: FLEXC++ and BISONC++</strong>: a quick start overview
-        about how to use <strong>flexc++</strong> in combination with <strong>bisonc++</strong>(1)
+        about how to use <strong>flexc++</strong> in combination with <strong>bisonc++</strong>(1);
     <li> <strong>3. GENERATED FILES</strong>: files generated by <strong>flexc++</strong> and their purposes
-    <li> <strong>4. OPTIONS</strong>: options available for <strong>flexc++</strong>
+    <li> <strong>4. OPTIONS</strong>: options available for <strong>flexc++</strong>.
     </ul>
 <p>
 The <strong>flexc++api</strong>(3) man-page:
@@ -201,7 +201,7 @@ class):
         
 </pre>
 
-    This generates four files</ul>:<em>Scanner.h, Scanner.ih, Scannerbase.h</em>, and
+    This generates four files</ul>:<em>Scanner.h, Scanner.hh, Scannerbase.h</em>, and
 <em>lex.cc</em> 
 <p>
 <li> Edit <em>Scanner.h</em>, add the enum defining the token-symbols in
@@ -335,7 +335,7 @@ parser.
     
 </pre>
 
-    to the file <em>scanner/Scanner.ih</em>
+    to the file <em>scanner/Scanner.hh</em>
 <p>
 <li> Write a simple <em>main</em> function in the file <em>main.cc</em>. E.g.,
     <pre>
@@ -411,7 +411,7 @@ is explicitly ordered <em>not</em> to do so.
 <li> A file containing the <em>implementation header</em>. This file should
 contain includes and declarations that are only required when compiling the
 members of the scanner class. By default this file is named
-<em>Scanner.ih</em>. This file, like the file containing the scanner class's
+<em>Scanner.hh</em>. This file, like the file containing the scanner class's
 interface is never rewritten by <strong>flexc++</strong> unless <strong>flexc++</strong> is explicitly ordered to do
 so.
     </ul>
@@ -530,7 +530,7 @@ It is an error if this option is used and an already
 <li> <strong>--implementation-header</strong>=<em>filename</em> (<strong>-i</strong>)<br> 
            Use <em>filename</em> as the name of the file to contain the
             implementation header. Defaults to the name of the generated
-            scanner class plus the suffix <em>.ih</em>. The implementation header
+            scanner class plus the suffix <em>.hh</em>. The implementation header
             should contain all directives and declarations <em>only</em> used by
             the implementations of the scanner's member functions. It is the
             only header file that is included by the source file containing
@@ -547,7 +547,7 @@ It is an error if this option is used and an already
 <li> <strong>--implementation-skeleton</strong>=<em>pathname</em> (<strong>-I</strong>)<br>
            Use <em>pathname</em> as the path to the file containing the skeleton of
             the implementation header. Its filename defaults to
-            <em>flexc++.ih</em>.
+            <em>flexc++.hh</em>.
 <p>
 <li> <strong>--lex-skeleton</strong>=<em>pathname</em> (<strong>-L</strong>)<br>
            Use <em>pathname</em> as the path to the file containing the
@@ -678,7 +678,7 @@ This option does <em>not</em> show the tokens returned and text matched
             interface. 
         <li> <em>Scannerbase.h</em>: the header file containing the interface of the 
             scanner class's base class.
-        <li> <em>Scanner.ih</em>: the internal header file that is meant to be included
+        <li> <em>Scanner.hh</em>: the internal header file that is meant to be included
             by the scanner class's source files (e.g., it is included by
             <em>lex.cc</em>, see the next item's file), and that should contain all
             declarations required for compiling the scanner class's sources.
