@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>flexc++api</h1>
-<h2>flexc++.2.03.00.tar.gz</h2>
+<h2>flexc++.2.03.01.tar.gz</h2>
 <h2>2008-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>flexc++api(3)</h1>
-<h2>flexc++.2.03.00.tar.gz flexc++ API</h2>
+<h2>flexc++.2.03.01.tar.gz flexc++ API</h2>
 <h2>2008-2015</h2>
 
 
@@ -901,7 +901,7 @@ object.
             interface. 
         <li> <em>Scannerbase.h</em>: the header file containing the interface of the 
             scanner class's base class.
-        <li> <em>Scanner.ih</em>: the internal header file that is meant to be included
+        <li> <em>Scanner.hh</em>: the internal header file that is meant to be included
             by the scanner class's source files (e.g., it is included by
             <em>lex.cc</em>, see the next item's file), and that should contain all
             declarations required for compiling the scanner class's sources.
