@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>flexc++input</h1>
-<h2>flexc++.2.03.00.tar.gz</h2>
+<h2>flexc++.2.03.01.tar.gz</h2>
 <h2>2008-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>flexc++input(7)</h1>
-<h2>flexc++.2.03.00.tar.gz flexc++ input file organization</h2>
+<h2>flexc++.2.03.01.tar.gz flexc++ input file organization</h2>
 <h2>2008-2015</h2>
 
 
@@ -239,7 +239,7 @@ It is an error if this directive is used and an already
             the generated code. 
 <p>
 <li> <strong>%filenames</strong> <em>= "basename"</em> <br>
-           Defines the basename of the <em>Scanner.h, Scanner.ih,</em> and
+           Defines the basename of the <em>Scanner.h, Scanner.hh,</em> and
             <em>Scannerbase.h</em> files. E.g., when using the directive
                 <pre>
 
@@ -248,7 +248,7 @@ It is an error if this directive is used and an already
 </pre>
 
            the names of the generated files are, respectively, <em>scanner.h,
-            scanner.ih,</em> and <em>scannerbase.h</em>.  Corresponding command-line
+            scanner.hh,</em> and <em>scannerbase.h</em>.  Corresponding command-line
             option: <em>--filenames</em>. The name of the source file (by default
             <em>lex.cc</em>) is controlled by the <em>%lex-source</em> directive.
 <p>
