@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.03.00) User Guide </title>
+<title> Flexc++ (Version 2.03.01) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -35,7 +35,7 @@ in <strong>C++</strong>, and merely generating <strong>C++</strong> code. Most f
 be usable with <strong>flexc++</strong>, with minor adjustments (see also `<a href="flexc++02.html#differences">differences
 with flex/flex++ 2</a>').
 <p>
-This edition of the manual documents version 2.03.00 and provides detailed
+This edition of the manual documents version 2.03.01 and provides detailed
 information on <strong>flexc++</strong>'s use and inner workings. Some texts are adapted from the
 <a href="http://flex.sourceforge.net/manual/index.html">flex manual</a>.  The manual
 page <strong>flexc++</strong>(1) provides an overview of the command line options and
@@ -189,7 +189,7 @@ It is an error if this option is used and an already
 <li> <strong>--implementation-header</strong>=<code>filename</code> (<strong>-i</strong>)<br> 
            Use <code>filename</code> as the name of the file to contain the
             implementation header. Defaults to the name of the generated
-            scanner class plus the suffix <code>.ih</code>. The implementation header
+            scanner class plus the suffix <code>.hh</code>. The implementation header
             should contain all directives and declarations <em>only</em> used by
             the implementations of the scanner's member functions. It is the
             only header file that is included by the source file containing
@@ -206,7 +206,7 @@ It is an error if this option is used and an already
 <li> <strong>--implementation-skeleton</strong>=<code>pathname</code> (<strong>-I</strong>)<br>
            Use <code>pathname</code> as the path to the file containing the skeleton of
             the implementation header. Its filename defaults to
-            <code>flexc++.ih</code>.
+            <code>flexc++.hh</code>.
 <p>
 <li> <strong>--lex-skeleton</strong>=<code>pathname</code> (<strong>-L</strong>)<br>
            Use <code>pathname</code> as the path to the file containing the
