@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> Flexc++ (Version 2.03.00) User Guide </title>
+<title> Flexc++ (Version 2.03.01) User Guide </title>
 <style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -165,7 +165,7 @@ It is an error if this directive is used and an already
             the generated code. 
 <p>
 <li> <strong>%filenames</strong> <code>= "basename"</code> <br>
-           Defines the basename of the <code>Scanner.h, Scanner.ih,</code> and
+           Defines the basename of the <code>Scanner.h, Scanner.hh,</code> and
             <code>Scannerbase.h</code> files. E.g., when using the directive
                 <pre>
 
@@ -174,7 +174,7 @@ It is an error if this directive is used and an already
 </pre>
 
            the names of the generated files are, respectively, <code>scanner.h,
-            scanner.ih,</code> and <code>scannerbase.h</code>.  Corresponding command-line
+            scanner.hh,</code> and <code>scannerbase.h</code>.  Corresponding command-line
             option: <code>--filenames</code>. The name of the source file (by default
             <code>lex.cc</code>) is controlled by the <code>%lex-source</code> directive.
 <p>
